# deepseek-client-python

./: LICENSE  README.md  pyproject.toml  pytest.ini
deepseek_client/: client.py
examples/: basic_usage.py
tests/: conftest.py  test_client.py
